# tax-recognize

./: .gitignore  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: config.rs  export.rs  file.rs  invoice.rs  mod.rs
src-tauri/src/db/: config_repo.rs  connection.rs  invoice_repo.rs  mod.rs  schema.rs  types.rs
src-tauri/src/models/: config.rs  invoice.rs  mod.rs  ocr_response.rs
src-tauri/src/services/: export.rs  file.rs  invoice.rs  mod.rs  ocr.rs
src/components/: index.ts
src/components/invoice/: DropZoneOverlay.tsx  FileUploader.tsx  InvoiceDetail.tsx  InvoiceFilter.tsx  InvoiceTable.tsx  TableComponents.tsx  UploadQueue.tsx  index.ts
src/components/layout/: Header.tsx  Sidebar.tsx
src/components/ui/: Button.tsx  ConfirmModal.tsx  Input.tsx  Loading.tsx  Modal.tsx  UpdateChecker.tsx  index.ts
src/hooks/: useInvoices.ts
src/pages/: HomePage.tsx  SettingsPage.tsx
src/services/: configService.ts  exportService.ts  fileService.ts  index.ts  invoiceService.ts
src/stores/: index.ts  invoiceStore.ts  settingsStore.ts  uiStore.ts
src/types/: api.ts  config.ts  index.ts  invoice.ts
src/utils/: format.ts
workspace/: summary.md
